--- a/src/index.css
+++ b/src/index.css
@@ -155,6 +155,6 @@ p{
   /* color: #022043 ; */
 }
 .logo-text{
- font-family: 'georgiab' !important;
- /* font-weight: 800 !important; */
+ font-family: 'GothamBold' !important;
+ font-weight: 600 !important;
 }
