--- a/src/Components/CareerSection/CareerSection.css
+++ b/src/Components/CareerSection/CareerSection.css
@@ -165,7 +165,7 @@
     margin-top: 10px;
     width: 100%;
     gap: 8px;
-    align-items: center;
+    text-align: left;
   }
 
   .car-explore-btn-div {
