--- a/src/Components/Events/Events.css
+++ b/src/Components/Events/Events.css
@@ -155,6 +155,10 @@
   .event-header-left {
     width: 100%;
     justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  .event-view-all-a-tag{
+    margin-left: auto;
   }
 
   .eve-platform {
