updated mobile optimization

--- a/src/Components/Events/Events.css
+++ b/src/Components/Events/Events.css
@@ -149,6 +149,7 @@
   }
 
   .eve-platform-indiviual-con p{
+    margin: 0;
     margin-bottom: 20px;
   }
   .event-header-left {
@@ -212,7 +213,6 @@
     margin-left: 0;
     display: flex;
     gap: 10px;
-    margin-left: 10%;
     justify-content: center;
   }
 
