--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -600,11 +600,33 @@
 }
 
 .fourth-level-parent .third-level-link {
-  color: #dddddd !important;
+  /* color: #dddddd !important;
   font-weight: 500;
   text-decoration: none;
-  flex-grow: 1;
+  flex-grow: 1; */
+  position: relative;
+  font-size: 0.75rem;
+  color: #fff !important;
+  cursor: pointer;
+  text-decoration: none;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+  padding-bottom: 4px;
+  font-weight: 600;
 }
+.career-reboot-link{
+  position: relative !important;
+  font-size: 0.75rem !important;
+  color: #fff !important;
+  cursor: pointer !important;
+  text-decoration: none !important;
+  text-transform: uppercase !important;
+  margin-bottom: 10px !important;
+  padding-bottom: 4px !important;
+  font-weight: 600 !important;
+}
+
+
 
 .fourth-level-parent:hover .third-level-link {
    color: rgb(0, 0, 0) !important;
