--- a/src/Components/NewFooter/NewFooter.css
+++ b/src/Components/NewFooter/NewFooter.css
@@ -46,7 +46,7 @@
 }
 .logoImage-footer{
     width:60%;
-    filter: brightness(0) invert(1);
+    /* filter: brightness(0) invert(1); */
 }
 .new-footer-logo{
     width: 20%;
