updated UCUbanner images

--- a/src/Components/Management/Management.css
+++ b/src/Components/Management/Management.css
@@ -204,31 +204,31 @@ align-items: center;
 
 /* Example background images per role */
 .bg-cxo {
-  background-image: url("https://images.unsplash.com/photo-1522202176988-66273c2fd55f?auto=format&fit=crop&w=1200&q=80");
+  background-image: url("https://www.rsalistscorporation.com/wp-content/uploads/2014/08/RSA_Page_6_CXO_Executives_Depositphotos_4589872_M__Copy-1024x617.jpg");
 }
 
 .bg-cio {
-  background-image: url("https://images.unsplash.com/photo-1559028012-481c04fa702d?auto=format&fit=crop&w=1200&q=80");
+  background-image: url("https://www.michaelpage.nl/sites/michaelpage.nl/files/legacy/role_cio_image_0.jpg");
 }
 
 .bg-cto {
-  background-image: url("https://images.unsplash.com/photo-1551836022-d5d88e9218df?auto=format&fit=crop&w=1200&q=80");
+  background-image: url("https://hctlinked.ir/fa/storage/2025/07/CTO.jpg");
 }
 
 .bg-cmo {
-  background-image: url("https://images.unsplash.com/photo-1504384764586-bb4cdc1707b0?auto=format&fit=crop&w=1200&q=80");
+  background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSdOACN2UvwcOcT4kQGOQ749o0T8Ybo1qsYOg&s");
 }
 
 .bg-chro {
-  background-image: url("https://images.unsplash.com/photo-1551434678-e076c223a692?auto=format&fit=crop&w=1200&q=80");
+  background-image: url("https://media.licdn.com/dms/image/v2/D4E12AQH0edPdIEVrBA/article-cover_image-shrink_720_1280/B4EZdbH2KYG4AQ-/0/1749580474196?e=2147483647&v=beta&t=MZloUIsD2khW54TtSLZdNuCmy5o9A-Q3g593VCz7tIU");
 }
 
 .bg-cfo {
-  background-image: url("https://images.unsplash.com/photo-1554224154-22dec7ec8818?auto=format&fit=crop&w=1200&q=80");
+  background-image: url("https://www.investopedia.com/thmb/mx1J_6B93_bD3ZsrhFL8Qws9d1g=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/SECForm425-41087544bb054a868ccbeb13482beb63.jpg");
 }
 
 .bg-cpo {
-  background-image: url("../../Assets/ucu (1)/Rectangle 100.jpg");
+  background-image: url("https://d3njjcbhbojbot.cloudfront.net/api/utilities/v1/imageproxy/https://images.ctfassets.net/wp1lcwdav1p1/1FplImupnGzhFScYQnGaMZ/1f11e82a3d5b47f271e5e06ea1e743c9/GettyImages-1960127569.jpg?w=1500&h=680&q=60&fit=fill&f=faces&fm=jpg&fl=progressive&auto=format%2Ccompress&dpr=1&w=1000");
 }
 
 
