--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -676,7 +676,7 @@
   text-transform: uppercase;
   margin-bottom: 10px;
   padding-bottom: 4px;
-  font-weight: 600;
+  font-weight: 600 !important;
   letter-spacing: 0.6px;
 }
 
