--- a/src/Components/NewFooter/NewFooter.css
+++ b/src/Components/NewFooter/NewFooter.css
@@ -31,6 +31,7 @@
     font-size: 13px;
     font-weight: 300;
     color: #dfdfdf;
+    margin-left: 20%;
 
  }
 .input-text{
@@ -64,10 +65,10 @@
 }
 .batchImage{
     position: relative;
-    height:235px;
-    object-fit: cover;
-    width: 100%;
-    top: -40%;
+    height:250px;
+    width: 130%;
+    top: -44%;
+    max-width: 150%;
 }
 .logo-batch-div{
     position: relative;
@@ -76,10 +77,10 @@
 }
 .logoImage-footer{
     position: absolute;
-    top:-20%;
-    left: 10%;
-    height: 80%;
-    width: 80%;
+    top:-32%;
+    left: 16%;
+    height: 95%;
+    width: 100%;
     cursor: pointer !important;
     /* filter: brightness(0) invert(1); */
 }
