--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -97,6 +97,9 @@
 /* ✅ Responsive Design */
 /* ✅ Responsive Design */
 @media (max-width: 768px) {
+  .footer-container{
+    margin-top: 15%;
+  }
   .footer-first-row {
     flex-direction: column;
     align-items: flex-start;
