--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -6,7 +6,7 @@
   font-size: 0.85rem;
 }
 .top-bar a {
-  color: #9a9999;
+  color: rgb(58, 58, 58);
   font-size: 11px;
   font-weight: 300;
   letter-spacing: 1px;
@@ -724,3 +724,58 @@ li:hover .career-reboot-heading {
 
 
 
+
+
+/* Show dropdown on hover for desktop */
+.navbar-nav .dropdown:hover .dropdown-menu,
+.list-inline .dropdown:hover .dropdown-menu {
+  display: block;
+  opacity: 1;
+  visibility: visible;
+}
+
+/* Optional smooth animation */
+.dropdown-menu {
+  display: none;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.5s ease, width 0.5s ease-in-out,
+    max-height 0.3s ease-in-out 0.8s,
+    /* start after width finishes */ padding 0.3s ease-in-out 0.8s,
+    transform 0.5s ease, visibility 0.5s ease;
+  margin-top: 0%; /* prevent jump */
+  background: rgba(14, 14, 34, 0.37);
+  backdrop-filter: blur(14px) saturate(180%);
+  transform: translateX(-50%) translateY(-10px);
+  border-top: 2px solid rgba(52, 140, 255, 0.5);
+  border-radius: 12px;
+  z-index: 1000;
+  box-shadow: 0 8px 25px rgba(0, 0, 0, 0.3);
+  padding: 2rem;
+  max-width: 1200px;
+  width: 400%;
+  z-index: 9999 !important;
+}
+
+.dropdown:hover .dropdown-menu {
+  display: block;
+  opacity: 1;
+  visibility: visible;
+}
+
+/* Increase font size only for top menu dropdown text */
+.top-bar .dropdown-menu .dropdown-menu-col ul li a {
+  font-size: 0.75rem !important; /* larger than default 0.75rem */
+}
+.top-bar .dropdown-menu .dropdown-menu-col ul li a:hover {
+  font-size: 0.75rem !important; /* larger than default 0.75rem */
+  text-decoration: none !important;
+}
+.top-bar .dropdown-menu .dropdown-menu-col .top-head a {
+  font-size: 0.75rem !important; /* larger heading */
+  text-decoration: none !important;
+}
+
+.top-dropdown{
+  margin-top: 15%;
+}
