--- a/src/Components/Management/Management.css
+++ b/src/Components/Management/Management.css
@@ -135,8 +135,10 @@ align-items: center;
 }
 .sort-disc{
   text-align: center;
-  opacity: 0.9;
-  font-size: 14px;
+  color: #000;
+  font-weight: 600;
+  opacity: 1;
+  font-size: 16px;
   font-weight: 300 !important;
   letter-spacing: 1px;
   max-width: 900px;
