--- a/src/Components/Management/Management.css
+++ b/src/Components/Management/Management.css
@@ -43,7 +43,8 @@
   display: flex;
   gap: 1.5rem;
   align-items: center;
-  background-color: #006dff;
+  /* background-color: #006dff; */
+  background: linear-gradient(205deg, rgba(23, 3, 169, 1) 1%, rgba(7, 186, 243, 1) 100%);
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
   overflow: hidden;
   border-radius: 10px;
@@ -105,8 +106,8 @@
   font-weight: bold;
 }
 .man-item-content p {
-  color: rgba(255, 255, 255, 0.801);
-  font-size: 0.9rem;
+  /* color: rgba(255, 255, 255, 0.801); */
+  font-size: "16px";
 }
 .EXPLORE-MDPS {
   color: white;
