about page animations added

--- a/src/Pages/AboutPage/AboutPhil/AboutPhil.css
+++ b/src/Pages/AboutPage/AboutPhil/AboutPhil.css
@@ -31,3 +31,9 @@
 .aboutphil-container {
   row-gap: 2rem;
 }
+
+.vision-supplementary-image{
+  height: 35vh;
+  width: 100%;
+  object-fit: cover;
+}
