--- a/src/Components/Management/Management.css
+++ b/src/Components/Management/Management.css
@@ -195,8 +195,10 @@ align-items: center;
 }
 
 .cxo-card p {
-  font-size: 0.8rem;
-  color: #e2e2e2 !important;
+  /* font-size: 0.8rem; */
+  color: #fff !important;
+  font-weight: 400;
+  letter-spacing: 0.1px;
   line-height: 1.4;
   margin: 0;
 }
@@ -214,15 +216,15 @@ align-items: center;
 }
 
 .bg-cio {
-  background-image: url("./CIO.jpg");
+  background-image: url("/CIO.jpg");
 }
 
 .bg-cto {
-  background-image: url("./CTO.webp");
+  background-image: url("/CTO.webp");
 }
 
 .bg-cmo {
-  background-image: url("./CMO.jpg");
+  background-image: url("/CMO.jpg");
 }
 
 .bg-chro {
