--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -180,9 +180,10 @@
   width: 100%;
 }
 
-.top-head a {
+.top-head a, button {
   text-decoration: none;
   font-weight: 500;
+  text-transform: uppercase;
   color: #fff !important;
   letter-spacing: 0.6px;
 }
